[package]
name = "bottom"
version = "0.1.0"
authors = ["Kaylynn <mkaylynn7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
unicode-segmentation = "1"