[package]
name = "bottomify"
description = "Fantastic (maybe) CLI for translating between bottom and human-readable text"
version = "1.0.0"
authors = ["Kaylynn <mkaylynn7@gmail.com>"]
license = "MIT"
repository = "https://github.com/kaylynn234/bottom"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
lazy_static = "1.4.0"
maplit = "1.0.2"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "speed"
harness = false
